2009-09-03  Alan McGovern  <amcgovern@novell.com>

	* plugin.cpp: It's possible that window will be null, so check
	  it exists before using it. r: toshok

2009-08-27  Chris Toshok  <toshok@ximian.com>

	* plugin.cpp (PluginInstance::NewStream): set the current deployment here.

	r: kangaroo
	
2009-08-26  Jackson Harper  <jackson@ximian.com>

	* plugin.cpp: check for the zip file magic instead of using file
	extension. r: toshok

2009-08-26  Alan McGovern  <amcgovern@novell.com>

	* cbinding.h: regen r: shana

2009-08-26  Jackson Harper  <jackson@ximian.com>

	* plugin.cpp: Use the xaml function for parsing bools so things
	like enablehtmlaccess=1 are handled properly.

	r: shana && kangaroo

2009-08-24  Sebastien Pouliot  <sebastien@ximian.com>

	* plugin-class.cpp: Free NPVariant array leaks

	r: andreia

2009-08-16  Chris Toshok  <toshok@ximian.com>

	* plugin.cpp (plugin_menu_about): we aren't doing previews
	anymore, we're doing betas.

	r: andreia
	
2009-08-12  Alan McGovern  <amcgovern@novell.com>

	* cbinding.h: regen r: toshok

2009-07-30  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.mdp: Connect the Build command in
        MonoDevelop with 'make install'.

2009-07-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.mdp: Use Makefile integration.

2009-07-23  Sebastien Pouliot  <sebastien at ximian.com>

	* plugin.cpp: Make sure 'source_original' is set even when scripting
	is used to initialize source. Remove xdomain warnings from mstv.cz

2009-07-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-class.cpp:
	* plugin-class.h.in: Added html_object_retain.

	* plugin-class.h: Regenerated.

2009-07-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.mdp: Updated.

2009-07-22  Sebastien Pouliot  <sebastien at ximian.com> 

	* plugin-class.cpp: Fix DEBUG_WARN_NOTIMPLEMENTED macro to output 
	all related information on the same line. Use NULL_TO_NPVARIANT
	with MoonId_MethodName (since this is a string).