@@ -22,7 +22,6 @@
 #include "bitmapimage.h"
 #include "uri.h"
 #include "textbox.h"
-#include "multiscaleimage.h"
 
 /*MAP_BODY*/
 
