@@ -99,6 +99,7 @@ enum PluginPropertyId {
 	MoonId_GridUnitType,
 	MoonId_Value,
 	MoonId_Accessibility,
+	MoonId_MultiScaleImage_Source,
 
 	// event names (handled by the property setters)
 	MoonId_BufferingProgressChanged,
@@ -182,6 +183,7 @@ enum PluginPropertyId {
 
 	MoonId_Select,
 	MoonId_SelectAll,
+
 	MoonId_MultiScaleImage_GetIthSubImage,
 	MoonId_MultiScaleImage_GetSubImageCount,
 	MoonId_MultiScaleImage_LogicalToElementX,
@@ -380,23 +382,6 @@ extern MoonlightDependencyObjectObject *DependencyObjectCreateWrapper (NPP insta
 
 /*************** AUTO GENERATED CLASSES ****************************/
 
-/*** MoonlightMultiScaleImageClass *********/
-struct MoonlightMultiScaleImageType : MoonlightDependencyObjectType {
-	MoonlightMultiScaleImageType ();
-};
-
-extern MoonlightMultiScaleImageType *MoonlightMultiScaleImageClass;
-
-struct MoonlightMultiScaleImageObject : MoonlightDependencyObjectObject {
-	MoonlightMultiScaleImageObject (NPP instance) : MoonlightDependencyObjectObject (instance)
-	{
-		moonlight_type = Type::MULTISCALEIMAGE;
-	}
-
-	virtual bool Invoke (int id, NPIdentifier name,
-		const NPVariant *args, guint32 argCount, NPVariant *result);
-
-};
 /*** MoonlightUIElementClass *********/
 struct MoonlightUIElementType : MoonlightDependencyObjectType {
 	MoonlightUIElementType ();
@@ -863,6 +848,24 @@ struct MoonlightMediaElementObject : MoonlightUIElementObject {
 
 	virtual bool Invoke (int id, NPIdentifier name,
 			     const NPVariant *args, guint32 argCount, NPVariant *result);
+};
+
+/*** MoonlightMultiScaleImage ***************************************************/
+
+struct MoonlightMultiScaleImageType : MoonlightDependencyObjectType {
+	MoonlightMultiScaleImageType ();
+};
+
+struct MoonlightMultiScaleImageObject : MoonlightDependencyObjectObject {
+	MoonlightMultiScaleImageObject (NPP instance) : MoonlightDependencyObjectObject (instance)
+	{
+		moonlight_type = Type::MULTISCALEIMAGE;
+	}
+
+	virtual bool Invoke (int id, NPIdentifier name,
+			     const NPVariant *args, guint32 argCount, NPVariant *result);
+
+	virtual bool SetProperty (int id, NPIdentifier name, const NPVariant *value);
 };
 
 /*** MoonlightImage ***************************************************/
