@@ -95,6 +95,7 @@ enum PluginPropertyId {
 	MoonId_GridUnitType,
 	MoonId_Value,
 	MoonId_Accessibility,
+	MoonId_MultiScaleImage_Source,
 
 	// event names (handled by the property setters)
 	MoonId_BufferingProgressChanged,
@@ -178,6 +179,12 @@ enum PluginPropertyId {
 
 	MoonId_Select,
 	MoonId_SelectAll,
+
+	MoonId_MultiScaleImage_GetIthSubImage,
+	MoonId_MultiScaleImage_GetSubImageCount,
+	MoonId_MultiScaleImage_LogicalToElementX,
+	MoonId_MultiScaleImage_LogicalToElementY,
+	MoonId_MultiScaleImage_ZoomAboutLogicalPoint,
 /*MAP_IDS*/
 };
 
@@ -816,6 +823,24 @@ struct MoonlightMediaElementObject : MoonlightUIElementObject {
 
 	virtual bool Invoke (int id, NPIdentifier name,
 			     const NPVariant *args, guint32 argCount, NPVariant *result);
+};
+
+/*** MoonlightMultiScaleImage ***************************************************/
+
+struct MoonlightMultiScaleImageType : MoonlightDependencyObjectType {
+	MoonlightMultiScaleImageType ();
+};
+
+struct MoonlightMultiScaleImageObject : MoonlightDependencyObjectObject {
+	MoonlightMultiScaleImageObject (NPP instance) : MoonlightDependencyObjectObject (instance)
+	{
+		moonlight_type = Type::MULTISCALEIMAGE;
+	}
+
+	virtual bool Invoke (int id, NPIdentifier name,
+			     const NPVariant *args, guint32 argCount, NPVariant *result);
+
+	virtual bool SetProperty (int id, NPIdentifier name, const NPVariant *value);
 };
 
 /*** MoonlightImage ***************************************************/
