@@ -1,3 +1,12 @@
+2009-09-03  Stephane Delcroix  <sdelcroix@novell.com>
+
+	* plugin-class.cpp|.g.cpp.in|.h.in: no longer auto generate bindings
+	for MSI, copy paste the autogenerated from .g.cpp to .cpp. add a 
+	SetProperty method and use to set the UriSource of the DZITS instead
+	of creating a new DZITS everytime.
+
+	* plugin-class.h|g.cpp: regen
+
 2009-09-03  Alan McGovern  <amcgovern@novell.com>
 
 	* plugin.cpp: It's possible that window will be null, so check
